--- a/_config.yml
+++ b/_config.yml
@@ -72,10 +72,10 @@ social:
 # 作者卡片 状态
 author_status:
   enable: false
-  status: ✍️
-  alias: writing_hand
-  fallback_src: https://github.githubassets.com/images/icons/emoji/unicode/270d.png
-  text: on Studying
+  status: 😋
+  alias: absmiddle
+  fallback_src: https://bu.dusays.com/2023/08/24/64e6c0e2c3d52.png
+  text: 贪吃中
   skills:
     # - 🤖️ 数码科技爱好者
     # - 🔍 分享与热心帮助
