作者卡片 状态配置变更，改为图片形式

--- a/_config.yml
+++ b/_config.yml
@@ -72,10 +72,8 @@ social:
 # 作者卡片 状态
 author_status:
   enable: false
-  status: 😋
-  alias: absmiddle
-  fallback_src: https://bu.dusays.com/2023/08/24/64e6c0e2c3d52.png
-  text: 贪吃中
+  # 可以是任何图片，建议放表情包或者emoji图片，效果都很好，[表情包速查](https://emotion.xiaokang.me/)
+  statusImg: "https://bu.dusays.com/2023/08/24/64e6ce9c507bb.png"
   skills:
     # - 🤖️ 数码科技爱好者
     # - 🔍 分享与热心帮助
