--- a/_config.yml
+++ b/_config.yml
@@ -707,14 +707,16 @@ theme_color:
   meta_theme_color_light: "#f7f9fe"
   meta_theme_color_dark: "#18171d"
 
-# 移动端侧栏 @since 1.5.4
+# 移动端侧栏
 sidebar:
-  avatar: true
-  archive: true
-  tag: true
-  category: true
+  site_data:
+    archive: true
+    tag: true
+    category: true
   menus_items: true
   tags_cloud: true
+  display_mode: true
+  nav_menu_project: true
 
 # 文章h2添加分隔线
 h2Divider: false
