--- a/_config.yml
+++ b/_config.yml
@@ -1277,6 +1277,11 @@ agreementPopup:
 rightClickMenu:
   enable: false
 
+# 动效
+dynamicEffect:
+  postTopWave: true # 文章顶部波浪效果
+  postTopRollZoomInfo: false # 文章顶部滚动时缩放
+
 # Inject
 # Insert the code to head (before '</head>' tag) and the bottom (before '</body>' tag)
 # 插入代码到头部 </head> 之前 和 底部 </body> 之前
