更新注释文件

--- a/_config.yml
+++ b/_config.yml
@@ -1208,7 +1208,7 @@ ptool:
 
 # 欢迎语配置
 greetingBox:
-  enable: false
+  enable: false #开启后必须配置下面的list对应的时间段，不然会出现小白条
   default: 晚上好👋
   list:
     # - greeting: 晚安😴
