--- a/package.json
+++ b/package.json
@@ -28,5 +28,5 @@
   },
   "homepage": "https://blog.anheyu.com/",
   "author": "anzhiyu <me@anheyu.com>",
-  "license": "Apache-2.0"
+  "license": "GPL-3.0"
 }
