--- a/_config.yml
+++ b/_config.yml
@@ -276,9 +276,10 @@ related_post:
 photofigcaption: false
 
 # post_pagination (分页)
-# value: 1 || 2 || false
+# value: 1 || 2 || 3 || false
 # 1: The 'next post' will link to old post
 # 2: The 'next post' will link to new post
+# 3: 只有下一篇，并且只在文章滚动到评论区时显示下一篇文章(新文章)
 # false: disable pagination
 post_pagination: 2
 
