post_pagination 3 支持

--- a/_config.yml
+++ b/_config.yml
@@ -279,8 +279,8 @@ photofigcaption: false
 # value: 1 || 2 || 3 || false
 # 1: The 'next post' will link to old post
 # 2: The 'next post' will link to new post
-# 3: 只有下一篇，并且只在文章滚动到评论区时显示下一篇文章(新文章)
-# 4: 只有下一篇，并且只在文章滚动到评论区时显示下一篇文章(新文章) 显示图片cover
+# 3: 只有下一篇，并且只在文章滚动到评论区时显示下一篇文章(旧文章)
+# 4: 只有下一篇，并且只在文章滚动到评论区时显示下一篇文章(旧文章) 显示图片cover
 # false: disable pagination
 post_pagination: 2
 
