--- a/_config.yml
+++ b/_config.yml
@@ -885,7 +885,7 @@ readmode: true
 centerConsole:
   enable: true
   card_tags:
-    enable: false
+    enable: true
     limit: 40 # if set 0 will show all
     color: false
     sort_order: # Don't modify the setting unless you know how it works
@@ -893,7 +893,7 @@ centerConsole:
       # - Hexo
       # - 前端
   card_archives:
-    enable: false
+    enable: true
     type: monthly # yearly or monthly
     format: MMMM YYYY # eg: YYYY年MM月
     order: -1 # Sort of order. 1, asc for ascending; -1, desc for descending
