--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "hexo-renderer-stylus": "^3.0.0",
     "hexo-renderer-pug": "^3.0.0"
   },
-  "homepage": "https://blog.anheyu.com/",
+  "homepage": "https://hexo.anheyu.com/",
   "author": "anzhiyu <me@anheyu.com>",
   "license": "GPL-3.0"
 }
